# stonks-analyzer

./: .gitignore  README.md  data.json  main.py  pyproject.toml  textual_tests.py
stonks_analyzer/: analyze_app.py  cli.py  finance_data.py  main.py  stock_data_builder.py
stonks_analyzer/data/: builder_functions.py  stock_data_builder.py
stonks_analyzer/layouts/: grid.tcss  grid_tcss.py  stock_dashboard.py  ticker_input_screen.py
stonks_analyzer/layouts/styles/: stock_dashboard_styles.tcss  ticker_input_styles.tcss
