[project]
name = "stonks-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "textual>=6.3.0",
    "textual-plotext>=1.0.1",
    "yfinance>=0.2.66",
]

[project.scripts]
stonks = "stonks_analyzer.main:main"

[tool.uv]
package = true
